--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,9 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "pypdf (>=5.3.0,<6.0.0)",
-    "pypdf2 (>=3.0.1,<4.0.0)"
+    "pypdf2 (>=3.0.1,<4.0.0)",
+    "ruff (>=0.9.7,<0.10.0)",
+    "mypy (>=1.15.0,<2.0.0)"
 ]
 
 
