--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,8 @@ dependencies = [
     "ruff (>=0.9.7,<0.10.0)",
     "mypy (>=1.15.0,<2.0.0)",
     "pydocstyle (>=6.3.0,<7.0.0)",
-    "isort (>=6.0.0,<7.0.0)"
+    "isort (>=6.0.0,<7.0.0)",
+    "pytest (>=8.3.4,<9.0.0)"
 ]
 
 
