--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,9 @@ dependencies = [
     "mypy (>=1.15.0,<2.0.0)",
     "pydocstyle (>=6.3.0,<7.0.0)",
     "isort (>=6.0.0,<7.0.0)",
-    "pytest (>=8.3.4,<9.0.0)"
+    "pytest (>=8.3.4,<9.0.0)",
+    "black (>=25.1.0,<26.0.0)",
+    "pylint (>=3.3.4,<4.0.0)"
 ]
 
 
